20220304T2244Z:

- Minor mods to the ucontext-based implementation

- Deleted the semaphore-based implementation, which is not sufficiently different from the pthread-and-mutex implementation to continue to be actively maintained

- Deleted some other ancillary stuff

20210802T1858Z:

- Modified the ucontext-based implementation to store neither the active nor inactive ucontext_t within the struct channel itself. A pointer to the inactive context is stored within the struct channel, and the actual structs are stored on the respective call stacks of the inactive threads. This somewhat alleviates the size requirement for the stack-and-struct-channel allocation.

- Added a pthread-and-semaphore-based fallback implementation, which is faster than the pthread-and-mutex implementation, at least on Linux with musl. On macOS the semaphores are implemented using a shim around the equivalent libdispatch functionality, which is slow.

20210730T0239Z:

- Added a ucontext-based fallback implementation, which implements the same API using the previously-POSIX ucontext mechanism. Note that if using the (very deprecated) macOS implementation of ucontext, this is only about twice as fast as the pthread-based version on macOS, likely due to the undesired saving and restoring of the signal mask upon context switching. If using libucontext, only aarch64 and x86_64 are currently supported, due to lack of libucontext saving and restoring fp regs on all hardware.

- Edited cotests.c to use a larger child-stack-on-parent-stack due to the massive size of ucontext_t on aarch64 if using libucontext

- Renamed "comparison_with_pthreads" to "context_switch_timing" and changed it to a simple timing of round-trip context switches of whatever implementation is selected

20210717T2029Z:
