@@ -14,7 +14,7 @@ all : ${TARGETS}
 # for each target, the list of objects to link, generated by recursively crawling include statements with a corresponding .c file:
 
 comorse : comorse.o coroutine.o 
-context_switch_timing : context_switch_timing.o coroutine.o timing.o 
+context_switch_timing : context_switch_timing.o coroutine.o 
 cotests : cotests.o coroutine.o 
 
 cotone: LDLIBS += -framework SDL2
@@ -25,11 +25,10 @@ cotone: cotone.o coroutine.o
 # for each object, the list of headers it depends on, generated by recursively crawling include statements:
 
 comorse.o : coroutine.h 
-context_switch_timing.o : coroutine.h timing.h 
+context_switch_timing.o : coroutine.h 
 coroutine.o : coroutine.h 
 cotests.o : coroutine.h 
 cotone.o : coroutine.h 
-timing.o : timing.h 
 
 *.o : Makefile
 
