@@ -1,3 +1,0 @@
-#include <stdint.h>
-
-unsigned long long current_monotonic_time_in_nanoseconds(void);
